# tuimanji

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: adding-a-game.md
src/tuimanji/: __init__.py  app.py  cli.py  db.py  doctor.py  engine.py  identity.py  models.py  session.py  store.py
src/tuimanji/games/: __init__.py  _common.py  battleship.py  checkers.py  chess.py  connect4.py  crazy_eights.py  mastermind.py  peg_solitaire.py  reversi.py  royal_ur.py  tic_tac_toe.py
src/tuimanji/ui/: canvas.py  lobby.py  match.py  theme.py  waiting.py
tests/: test_battleship.py  test_checkers.py  test_chess.py  test_connect4.py  test_crazy_eights.py  test_lobby.py  test_mastermind.py  test_peg_solitaire.py  test_reversi.py  test_royal_ur.py  test_shared_perms.py  test_store.py  test_tic_tac_toe.py  test_waiting.py
