[project]
name = "tuimanji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alan Velasco", email = "alanvelasco.a@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.38",
    "textual>=8.2.3",
]

[project.scripts]
tuimanji = "tuimanji:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
