[project]
name = "tuimanji"
version = "0.1.0"
description = "Pubnix-local turn-based multiplayer TUI for tic-tac-toe, chess, checkers, Reversi, Battleship, Connect 4, Crazy Eights, Royal Game of Ur, and peg solitaire."
readme = "README.md"
authors = [
    { name = "Alan Velasco", email = "alanvelasco.a@gmail.com" }
]
license = "LGPL-3.0-or-later"
license-files = ["COPYING", "COPYING.LESSER"]
requires-python = ">=3.13"
keywords = [
    "tui",
    "textual",
    "multiplayer",
    "game",
    "board-game",
    "pubnix",
    "sqlite",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Typing :: Typed",
]
dependencies = [
    "sqlmodel>=0.0.38",
    "textual>=8.2.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/alanbato/tuimanji"
Source = "https://github.com/alanbato/tuimanji"
Issues = "https://github.com/alanbato/tuimanji/issues"
Changelog = "https://github.com/alanbato/tuimanji/blob/main/CHANGELOG.md"

[project.scripts]
tuimanji = "tuimanji.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "tuimanji"


[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = "--no-verify"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
